--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo-image-picker": "~9.2.0",
     "expo-status-bar": "~1.0.3",
     "formik": "^2.2.6",
+    "permissions": "^0.1.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
