--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-native-community/art": "^1.2.0",
     "@react-native-community/hooks": "^2.6.0",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/netinfo": "5.9.7",
     "@react-navigation/bottom-tabs": "^5.11.9",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
@@ -22,6 +23,7 @@
     "expo-status-bar": "~1.0.3",
     "formik": "^2.2.6",
     "lottie-react-native": "~2.6.1",
+    "moment": "^2.29.1",
     "permissions": "^0.1.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
